footer css started working, however its attributes are stuck on the originals, needs fixing

--- a/Tamagotchi/wwwroot/css/styles.css
+++ b/Tamagotchi/wwwroot/css/styles.css
@@ -1,9 +1,23 @@
-div#Footer {
+#footer {
   position: fixed;
-  bottom: 0px;
+  top: 0px;
   left: 0px;
   width: 100%;
-  color: red;
-  background: olive;
-  padding: 8px;
+  color: black;
+  background: pink;
+  padding: 0px;
+}
+
+div#Body {
+  background-color: rgb(148, 148, 223);
+}
+
+div#Header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 50%;
+  color: blue;
+  background-color: rgb(202, 80, 100);
+  padding: 5px;
 }
